# spotiflow_2d_tracking

./: .gitignore  README.md  conftest.py  n2v_denoise.py  pyproject.toml
src/napari_spotiflow_tracking/: _cleanup_widget.py  _detection_widget.py  _fitting.py  _preprocessing.py  _segmentation.py  _tracking.py  _tracking_widget.py  _workers.py  napari.yaml
src/napari_spotiflow_tracking/_tests/: test_detection_widget.py  test_fitting.py  test_segmentation.py  test_tracking.py  test_tracking_widget.py
