[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "napari-spotiflow-tracking"
version = "0.1.0"
description = "Napari plugin for 2D spot detection and particle tracking using Spotiflow and trackpy"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
dependencies = [
    "numpy",
    "spotiflow>=0.6.0",
    "qtpy",
    "pandas",
    "trackpy",
    "scikit-image",
    "scipy",
]

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "napari",
    "pyqt5",
]
dev = [
    "pre-commit",
    "ruff",
]

[project.entry-points."napari.manifest"]
napari-spotiflow-tracking = "napari_spotiflow_tracking:napari.yaml"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
napari_spotiflow_tracking = ["napari.yaml"]

# [tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["src/napari_spotiflow_tracking/_tests"]
